src/components/Article/Status/styles.scss
.article-status {
  display: inline-flex;

  padding: 5px 10px;

  font-weight: 700;
  text-transform: uppercase;
  font-size: 10px;
  line-height: 12px;
  letter-spacing: 0.1em;
  font-family: $font-family-alt;

  color: $white;
  &--orange {
    background: #f2994a;
  }
  &--green {
    background: #1d9e74;
  }
  &--blue {
    background: #3f9ae3;
  }
  &--red {
    background: red;
  }
}

